[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/ActionSelector/ButtonCategoryContainer.gd" type="Script" id=2]

[node name="Control" type="Control"]
show_behind_parent = true
margin_right = 50.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ButtonCategoryContainer" type="PanelContainer" parent="."]
margin_right = 50.0
margin_bottom = 60.0
mouse_filter = 1
size_flags_horizontal = 12
size_flags_vertical = 12
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonCategoryContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 49.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="PanelContainer" parent="ButtonCategoryContainer/VBoxContainer"]
margin_right = 48.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3

[node name="Panel2" type="Panel" parent="ButtonCategoryContainer/VBoxContainer"]
margin_top = 11.0
margin_right = 48.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="ButtonCategoryContainer/VBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 48, 0 )
size_flags_horizontal = 12
size_flags_vertical = 12
scroll_horizontal_enabled = false

[node name="ButtonContainer" type="HFlowContainer" parent="ButtonCategoryContainer/VBoxContainer/Panel2/ScrollContainer"]
unique_name_in_owner = true
margin_right = 48.0
margin_bottom = 47.0
rect_min_size = Vector2( 48, 47 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0

[node name="ActionDataPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ActionDataContainer" type="VBoxContainer" parent="ActionDataPanelContainer"]
unique_name_in_owner = true
margin_left = 1.0
margin_top = 1.0
margin_right = 9.0
margin_bottom = 9.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.5
margin_right = 30.5
margin_bottom = 11.0
rect_clip_content = true
mouse_filter = 1
text = "Category"
align = 1
